fix: align table by center

--- a/styles/elements/statistics_table.css
+++ b/styles/elements/statistics_table.css
@@ -1,3 +1,6 @@
+.table_wrap {
+    width: 100%;
+}
 .statistics_table {
     display: grid;
     border-collapse: collapse;
